fix content image alt

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -29,7 +29,7 @@ import { Image } from 'astro:assets'
   >
     <Image
       src={nano}
-      alt="Big Nano Coach Profile Picture"
+      alt="Foto de perfil de Big Nano Coach"
       class="w-[300px] rounded-xl md:w-[400px]"
     />
     <div class="px-10 md:p-0">
