--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -21,7 +21,7 @@ const { post } = Astro.props
       width={400}
       height={200}
       src={post.data.image}
-      alt={post.data.title}
+      alt={post.data.imageAlt}
       transition:name={'img-' + post.slug}
     />
   </a>
