new assets and improve structure

--- a/src/components/Faqs.astro
+++ b/src/components/Faqs.astro
@@ -21,7 +21,7 @@ import Header from './layout/Header.astro'
         <details class="w-full border-b" id="details">
           <summary class="flex flex-1 items-center justify-between py-4 font-medium hover:underline">
             {item.title}
-            <ChevronDown class="h-4 w-4 shrink-0" />
+            <ChevronDown className="h-4 w-4 shrink-0" />
           </summary>
           <div class="py-5">{item.text}</div>
         </details>
