--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -24,7 +24,7 @@ import { FormDialog } from '../components/react/FormDialog'
     <FormDialog client:load text="Contactame" />
   </div>
   <div class="gradient hidden aspect-square w-1/2 md:block">
-    <Image src={boxingGloves} alt="Boxing Gloves Hero" />
+    <Image src={boxingGloves} alt="Fotografia de unos guantes de boxeo rojos" />
   </div>
 </section>
 
