--- a/src/components/layout/Navbar.astro
+++ b/src/components/layout/Navbar.astro
@@ -1,12 +1,12 @@
 ---
 // Assets Imports - Info
-import { navLinks } from '../constants/index'
+import { navLinks } from '../../constants/index'
 
 // Astro Imports - Components
 import ThemeToggle from './ThemeToggle.astro'
 
 // React Imports - Components
-import { SheetNav } from './react/SheetNav'
+import { SheetNav } from '../react/SheetNav'
 ---
 
 <header class="sticky top-0 z-40 w-full border-b bg-background">
