--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
 import HeadSEO from '../components/HeadSEO.astro'
-import Footer from '../components/Footer.astro'
-import Navbar from '../components/Navbar.astro'
+import Footer from '../components/layout/Footer.astro'
+import Navbar from '../components/layout/Navbar.astro'
 
 export interface SeoProps {
   title?: string | undefined
