--- a/src/components/TrainingCard.astro
+++ b/src/components/TrainingCard.astro
@@ -1,23 +1,25 @@
 ---
-// Assets Imports - Icons
-import { Check } from 'lucide-react'
-
 // Astro Imports - Globals
 import { Image } from 'astro:assets'
 
 interface Props {
   title: string
   description: string
-  image: image
+  image: ImageMetadata
   info: string[]
   precio: string
 }
 
-const { title, description, image, info, precio } = Astro.props
+const { title, description, image } = Astro.props
 ---
 
 <div class="flex w-full flex-col items-center justify-center gap-5">
-  <Image src={image} alt={title} class="object-fill" height="250px" />
+  <Image
+    src={image}
+    alt={`una fotografia de un entrenamiento de ${title}`}
+    class="object-fill"
+    height={250}
+  />
   <div class="space-y-5">
     <h4 class="text-bold text-2xl font-semibold leading-none tracking-tight">
       {title}
