--- a/src/components/blog/BlogHeader.astro
+++ b/src/components/blog/BlogHeader.astro
@@ -9,13 +9,16 @@ import Header from '../layout/Header.astro'
 import { getCategories } from '../../lib/fetchers'
 import { cn } from '../../lib/utils'
 
+// Categories Fetch
 const categories = await getCategories()
 
+// Props Types
 type Props = {
   title: string
   subtitle: string
 }
 
+// Astro Props & Params
 const { title, subtitle } = Astro.props
 const { category } = Astro.params
 ---
@@ -23,7 +26,10 @@ const { category } = Astro.params
 <header
   class="flex flex-col items-center justify-between gap-5 py-10 pr-10 md:flex-row"
 >
+  <!-- Header -->
   <Header title={title} subtitle={subtitle} />
+
+  <!-- Categories List -->
   <div class="mx-auto mt-3 w-full px-6 md:mx-0 md:mt-0 md:w-fit md:px-0">
     {
       categories?.length ? (
