--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,9 @@ import Faqs from '../components/Faqs.astro'
 
 <BaseLayout
   title="Nano Fighters Club"
-  description="This template helps you build apps with Astro, Tailwind CSS, and shadcn/ui."
+  description="Experimenta la Excelencia en Boxeo y Kickboxing con Entrenamiento
+      Personalizado a Domicilio, Diseñado para Adaptarse a Tu Ritmo y Objetivos,
+      Maximizando Tu Potencial en las Artes Marciales de Combate."
 >
   <Hero />
   <About />
