--- a/src/components/layout/HeadSEO.astro
+++ b/src/components/layout/HeadSEO.astro
@@ -4,11 +4,12 @@ import { ViewTransitions } from 'astro:transitions'
 import { type CollectionEntry } from 'astro:content'
 
 // Lib Imports
-import jsonLDGenerator from '../lib/jsonLd'
+import jsonLDGenerator from '../../lib/jsonLd'
 
 // Style Imports
 import '@/styles/globals.css'
 
+// Props Types
 interface Props {
   title?: string | undefined
   description?: string | undefined
@@ -17,14 +18,18 @@ interface Props {
   post?: CollectionEntry<'blog'>
 }
 
+// Canonical URL for SEO
 const canonicalURL = new URL(Astro.url.pathname, Astro.site)
 
+// Open Graph Image
 if (Astro.props.ogImage === undefined) {
   Astro.props.ogImage = new URL('og-image.png', canonicalURL)
 }
 
+// Astro Props
 const { title, description, ogImage, post, url = Astro.url } = Astro.props
 
+// JsonLd Genearting acording to the page type
 const jsonLD = jsonLDGenerator({
   type: post ? 'post' : 'website',
   post: post,
@@ -71,14 +76,14 @@ const jsonLD = jsonLDGenerator({
 
 <!-- Open Graph -->
 <meta property="og:type" content={post ? 'blog.articule' : 'website'} />
-<meta property="og:url" content={canonicalURL} />
+<meta property="og:url" content={url ? url : canonicalURL} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
 <meta property="og:image" content={ogImage} />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content={canonicalURL} />
+<meta property="twitter:url" content={url ? url : canonicalURL} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={ogImage} />
