--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,20 +1,29 @@
 ---
-import HeadSEO from '../components/HeadSEO.astro'
+import HeadSEO from '../components/layout/HeadSEO.astro'
 import Footer from '../components/layout/Footer.astro'
 import Navbar from '../components/layout/Navbar.astro'
+import { type CollectionEntry } from 'astro:content'
 
 export interface SeoProps {
   title?: string | undefined
   description?: string | undefined
   ogImage?: URL | undefined
+  url?: URL | undefined
+  post?: CollectionEntry<'blog'>
 }
 
-const { title, description, ogImage } = Astro.props
+const { title, description, ogImage, url, post } = Astro.props
 ---
 
 <html lang="en">
   <head>
-    <HeadSEO title={title} description={description} ogImage={ogImage} />
+    <HeadSEO
+      title={title}
+      description={description}
+      ogImage={ogImage}
+      url={url}
+      post={post}
+    />
   </head>
   <body class="min-h-screen bg-background font-sans antialiased">
     <div class="relative flex min-h-screen flex-col">
