--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,13 +5,13 @@ import About from '../components/About.astro'
 import Entrenamientos from '../components/Entrenamientos.astro'
 import Testimonios from '../components/Testimonios.astro'
 import Faqs from '../components/Faqs.astro'
+
+export const prerender = true
 ---
 
 <BaseLayout
   title="Nano Fighters Club"
-  description="Experimenta la Excelencia en Boxeo y Kickboxing con Entrenamiento
-      Personalizado a Domicilio, Diseñado para Adaptarse a Tu Ritmo y Objetivos,
-      Maximizando Tu Potencial en las Artes Marciales de Combate."
+  description="Experimenta la Excelencia en Boxeo y Kickboxing con Entrenamiento Personalizado a Domicilio, Diseñado para Adaptarse a Tu Ritmo y Objetivos,Maximizando Tu Potencial en las Artes Marciales de Combate."
 >
   <Hero />
   <About />
