--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -24,7 +24,11 @@ import { FormDialog } from '../components/react/FormDialog'
     <FormDialog client:load text="Contactame" />
   </div>
   <div class="gradient hidden aspect-square w-1/2 md:block">
-    <Image src={boxingGloves} alt="Fotografia de unos guantes de boxeo rojos" />
+    <Image
+      src={boxingGloves}
+      alt="Fotografia de unos guantes de boxeo rojos"
+      loading="eager"
+    />
   </div>
 </section>
 
