--- a/src/components/Faqs.astro
+++ b/src/components/Faqs.astro
@@ -16,6 +16,7 @@ import Header from './layout/Header.astro'
   <div
     class="flex w-full max-w-[1680px] flex-col items-center justify-center px-10 md:px-20"
   >
+  <!-- Frequently Asked Questions Lists -->
     {
       faqs.map((item) => (
         <details class="w-full border-b" id="details">
