--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -18,7 +18,7 @@ import { FormDialog } from '../components/react/FormDialog'
     </h1>
     <p class="max-w-[700px] text-lg text-muted-foreground">
       Experimenta la Excelencia en Boxeo y Kickboxing con Entrenamiento
-      Personalizado a Domicilio, Diseñado para Adaptarse a Tu Ritmo y Objetivos,
+      Personalizado a Domicilio en Marbella, Diseñado para Adaptarse a Tu Ritmo y Objetivos,
       Maximizando Tu Potencial en las Artes Marciales de Combate.
     </p>
     <FormDialog client:load text="Contactame" />
@@ -32,6 +32,7 @@ import { FormDialog } from '../components/react/FormDialog'
   </div>
 </section>
 
+<!-- Specific style fo the gradient behind the Gloves -->
 <style>
   .gradient {
     background: radial-gradient(
