--- a/src/components/layout/HeadSEO.astro
+++ b/src/components/layout/HeadSEO.astro
@@ -43,14 +43,13 @@ const jsonLD = jsonLDGenerator({
 <meta name="googlebot" content="index, follow" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="generator" content={Astro.generator} />
-<meta name="keywords" content="your, tags" />
-<meta name="description" content="150 words" />
-<meta name="subject" content="your website's subject" />
+<meta name="keywords" content="boxeo en Marbella, boxeo en San Pedro de Alcántara, kickboxing en Marbella, kickboxing en San Pedro de Alcántara, entrenador de boxeo, entrenador de kickboxing, entrenador a domicilio, entrenamiento personalizado, grupos reducidos, escuela cubana de boxeo, entrenemiento en area libre" />
+<meta name="subject" content="Combat sports training business" />
 <meta name="language" content="ES" />
 <meta name="Classification" content="Business" />
-<meta name="author" content="name, email@hotmail.com" />
-<meta name="designer" content="" />
-<meta name="owner" content="" />
+<meta name="author" content="Adrian 'Nano' Alvarez, adrian.alvarezalonso1991@gmail.com" />
+<meta name="designer" content="Adrian 'Nano' Alvarez" />
+<meta name="owner" content="Adrian 'Nano' Alvarez" />
 <link rel="canonical" href={canonicalURL} />
 <meta name="title" content={title} />
 <meta name="description" content={description} />
@@ -66,12 +65,12 @@ const jsonLD = jsonLDGenerator({
 <!-- Favicon -->
 <link
   rel="apple-touch-icon-precomposed"
-  href={`${Astro.site}/apple-touch-icon.png`}
+  href={`${Astro.site}apple-touch-icon.png`}
 /><!-- iPhone, iPod e Android 2.2+ -->
 <link
   rel="shortcut icon"
   type="image/x-icon"
-  href={`${Astro.site}/favicon.ico`}
+  href={`${Astro.site}favicon.ico`}
 />
 
 <!-- Open Graph -->
