--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,7 +1,12 @@
 ---
+// Astro imports - Components
 import BaseLayout from '../layouts/BaseLayout.astro'
 
+// Style Imports
 import { buttonVariants } from '../components/ui/button'
+
+// create static page instead of SSR
+export const prerender = true
 ---
 
 <BaseLayout
