--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -9,6 +9,7 @@ import { formatDate, capitalizer } from '../../lib/utils'
 import { getRelatedPosts } from '../../lib/fetchers'
 import { ChevronLeft } from 'lucide-react'
 
+// Function to create the path for all the blogs
 export async function getStaticPaths() {
   const posts = await getCollection('blog')
   return posts.map((post) => ({
@@ -17,14 +18,23 @@ export async function getStaticPaths() {
   }))
 }
 
+// Props types
 type Props = CollectionEntry<'blog'>
 
+// Astro Props
 const post = Astro.props
 const { title, date, excerpt, author, categories, image } = post.data
+
+// Astro Params
 const slug = Astro.params.slug
+
+// Special function to render the content of the MD
 const { Content } = await post.render()
+
+// Get realated Posts
 const relatedPosts = await getRelatedPosts(categories[0], title)
 
+// Redirect in case the path dosent exits
 if (!slug || !post) {
   return new Response(null, {
     status: 404,
@@ -32,6 +42,7 @@ if (!slug || !post) {
   })
 }
 
+// create static page instead of SSR
 export const prerender = true
 ---
 
@@ -52,6 +63,7 @@ export const prerender = true
        See all posts
     </a>
 
+    <!-- Category List -->
     <article class="prose max-w-none dark:prose-invert">
       {
         categories.map((category) => (
@@ -63,6 +75,7 @@ export const prerender = true
           </a>
         ))
       }
+      <!-- Image -->
       <Image
         class="my-6 overflow-hidden rounded-xl"
         width={1020}
@@ -71,6 +84,7 @@ export const prerender = true
         alt={title}
         transition:name={'img-' + slug}
       />
+      <!-- Date and Author -->
       <div class="flex items-center justify-between">
         <span
           class="font-medium text-muted-foreground"
@@ -82,14 +96,17 @@ export const prerender = true
           {author}
         </span>
       </div>
+      <!-- Title and description -->
       <h1 class="font-heading my-4 text-4xl" transition:name={'title-' + slug}>
         {title}
       </h1>
       <p>{excerpt}</p>
       <hr class="my-6" />
+      <!-- Content -->
       <Content />
       <hr class="my-6" />
       <h6 class="mb-5 text-xl text-accent">Articulos Relacionados</h6>
+      <!-- related posts -->
       <div
         class="flex flex-col items-center justify-between gap-5 md:flex-row md:gap-0"
       >
