--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -14,6 +14,7 @@ import { Image } from 'astro:assets'
   <div
     class="flex w-full max-w-[1680px] animate-marquee items-center justify-between gap-3 px-5 md:animate-none md:gap-0"
   >
+  <!-- Stats List marque in mobile -->
     {
       stats.map((stat) => (
         <div class="flex w-auto gap-3">
@@ -27,6 +28,7 @@ import { Image } from 'astro:assets'
   <div
     class="flex max-w-[1280px] flex-col items-center justify-center gap-10 py-10 md:flex-row"
   >
+<!-- Image and Info -->
     <Image
       src={nano}
       alt="Foto de perfil de Big Nano Coach"
@@ -48,11 +50,9 @@ import { Image } from 'astro:assets'
         entrenador de alto rendimiento de la Federación de Judo-Kickboxing, he
         tenido el privilegio de guiar a los atletas hacia el máximo rendimiento.
         En el camino, competí en varios torneos de nivel junior, alimentando mi
-        pasión por el deporte. Además, tuve el honor de servir como instructor
-        asistente de CQC para las Fuerzas Especiales Cubanas. Con más de una
-        década de experiencia en entrenamiento personalizado, me dedico a ayudar
-        a las personas a liberar todo su potencial en los deportes de combate y
-        más allá.
+        pasión por el deporte. Con más de una década de experiencia en entrenamiento 
+        personalizado, me dedico a ayudar a las personas a liberar todo su potencial 
+        en los deportes de combate y más allá. entrenando a domicilio o en area libre en hermosa Marbella
       </p>
     </div>
   </div>
