--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,10 +1,12 @@
 ---
+// Astro Imports - Components & Globas
 import HeadSEO from '../components/layout/HeadSEO.astro'
 import Footer from '../components/layout/Footer.astro'
 import Navbar from '../components/layout/Navbar.astro'
 import { type CollectionEntry } from 'astro:content'
 
-export interface SeoProps {
+// Props imterface
+interface Props {
   title?: string | undefined
   description?: string | undefined
   ogImage?: URL | undefined
@@ -12,6 +14,7 @@ export interface SeoProps {
   post?: CollectionEntry<'blog'>
 }
 
+// Astro Props
 const { title, description, ogImage, url, post } = Astro.props
 ---
 
