--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,8 +8,10 @@ import { type CollectionEntry } from 'astro:content'
 // Import Utils
 import { getPosts } from '../../lib/fetchers'
 
+// Get all Posts
 const posts: CollectionEntry<'blog'> = await getPosts()
 
+// create static page instead of SSR
 export const prerender = true
 ---
 
@@ -19,6 +21,7 @@ export const prerender = true
 >
   <section class="mx-auto max-w-[1680px]">
     <BlogHeader title="NFC Blog" subtitle="Deleitate con los articulos de" />
+    <!-- Posts card Lists -->
     <div
       class="lg:gap mb-5 grid grid-cols-1 gap-x-6 gap-y-9 px-10 md:grid-cols-2 md:gap-y-11 md:px-0 lg:grid-cols-3 lg:gap-x-8"
     >
