--- a/src/pages/categories/[category].astro
+++ b/src/pages/categories/[category].astro
@@ -8,6 +8,7 @@ import BlogHeader from '../../components/blog/BlogHeader.astro'
 import { getPostsByCategory, getCategories } from '../../lib/fetchers'
 import { capitalizer } from '../../lib/utils'
 
+// Function to create the path for all the categories of the blog
 export async function getStaticPaths() {
   const categories = await getCategories()
   return categories.map((category) => ({
@@ -15,8 +16,10 @@ export async function getStaticPaths() {
   }))
 }
 
+// Astro params
 const { category } = Astro.params
 
+// Redirect in case the path dosent exits
 if (!category) {
   return new Response(null, {
     status: 404,
@@ -24,8 +27,10 @@ if (!category) {
   })
 }
 
+// Get Posts by categories
 const posts = await getPostsByCategory(category)
 
+// create static page instead of SSR
 export const prerender = true
 ---
 
@@ -35,6 +40,7 @@ export const prerender = true
 >
   <section class="mx-auto max-w-[1680px]">
     <BlogHeader title="NFC Blog" subtitle="Deleitate con los articulos de" />
+    <!-- Posts Card List -->
     <div
       class="lg:gap mb-5 grid grid-cols-1 gap-x-6 gap-y-9 px-10 md:grid-cols-2 md:gap-y-11 md:px-0 lg:grid-cols-3 lg:gap-x-8"
     >
