--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+// Astro Imports - Components
 import BaseLayout from '../layouts/BaseLayout.astro'
 import Hero from '../components/Hero.astro'
 import About from '../components/About.astro'
@@ -6,6 +7,7 @@ import Entrenamientos from '../components/Entrenamientos.astro'
 import Testimonios from '../components/Testimonios.astro'
 import Faqs from '../components/Faqs.astro'
 
+// create static page instead of SSR
 export const prerender = true
 ---
 
