--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -29,6 +29,15 @@ const { title, description, ogImage, url, post } = Astro.props
     />
   </head>
   <body class="min-h-screen bg-background font-sans antialiased">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-WVVRPDML"
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden"></iframe></noscript
+    >
+    <!-- End Google Tag Manager (noscript) -->
     <div class="relative flex min-h-screen flex-col">
       <Navbar />
       <main class="flex-auto">
