--- a/src/components/layout/HeadSEO.astro
+++ b/src/components/layout/HeadSEO.astro
@@ -38,9 +38,11 @@ const jsonLD = jsonLDGenerator({
 ---
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-FM93CYH0GQ"
-></script>
-<script>
+<script
+  type="text/partytown"
+  async
+  src="https://www.googletagmanager.com/gtag/js?id=G-FM93CYH0GQ"></script>
+<script type="text/partytown">
   window.dataLayer = window.dataLayer || []
   function gtag() {
     dataLayer.push(arguments)
