--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,8 +4,9 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Establece el esquema de color por defecto en dark */
 :root {
-  color-scheme: dark light;
+  color-scheme: dark;
 }
 
 @layer base {
@@ -28,9 +29,9 @@
     --secondary-foreground: 222.2 47.4% 11.2%;
 
     --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
+    --muted-foreground: 219 15% 36%;
 
-    --accent: 210 40% 96.1%;
+    --accent: 0 90% 37%;
     --accent-foreground: 222.2 47.4% 11.2%;
 
     --destructive: 0 84.2% 60.2%;
@@ -62,7 +63,7 @@
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
 
-    --accent: 217.2 32.6% 17.5%;
+    --accent: 0 91% 62%;
     --accent-foreground: 210 40% 98%;
 
     --destructive: 0 62.8% 30.6%;
