nuevo blog articule

--- a/src/components/layout/HeadSEO.astro
+++ b/src/components/layout/HeadSEO.astro
@@ -60,7 +60,7 @@ const jsonLD = jsonLDGenerator({
 <meta name="generator" content={Astro.generator} />
 <meta
   name="keywords"
-  content="boxeo en Marbella, boxeo en San Pedro de Alcántara, kickboxing en Marbella, kickboxing en San Pedro de Alcántara, entrenador de boxeo, entrenador de kickboxing, entrenador a domicilio, entrenamiento personalizado, grupos reducidos, escuela cubana de boxeo, entrenemiento en area libre"
+  content="boxeo en Marbella, boxeo en San Pedro de Alcántara, kickboxing en Marbella, kickboxing en San Pedro de Alcántara, entrenador de boxeo, entrenador de kickboxing, entrenador a domicilio, entrenamiento personalizado, grupos reducidos, escuela cubana de boxeo, entrenamiento en area libre"
 />
 <meta name="subject" content="Combat sports training business" />
 <meta name="language" content="ES" />
